Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73734

[REG: 5.12.0->5.12.1]: When a type is using Q_GADGET and is marked as a primitive type with Q_DECLARE_METATYPE then it cannot be accessed in QML when passed via a signal

XMLWordPrintable

    • 9343fbc478e42c7aec3247486b25b34f1908e93b (qt/qtdeclarative/5.12)

      [REG: 5.12.0->5.12.1]: When a type is using Q_GADGET and is marked as a primitive type with Q_DECLARE_METATYPE then it cannot be access the properties on it in QML when passed via a signal.

      If the type is not marked as a primitive type in Q_DECLARE_METATYPE then it is working fine.

        For Gerrit Dashboard: QTBUG-73734
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes