PropertCache: Don't pass Q_GADGET value types as integers

We need to check for the IsGadget flag there.

Fixes: QTBUG-73734
Change-Id: Ic4afd4215e6ed346bc40794d85397f0f262715e2
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>